[3.10] bpo-45581: Raise `MemoryError` in `sqlite3.connect` if SQLite signals memory error (GH-29171). (cherry picked from commit e2e62b3808691e15fa44b883270023e42dcad958)

Co-authored-by: Erlend Egeberg Aasland <erlend.aasland@innova.no>